k8s/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
  labels:
    app: load-generator
spec:
  containers:
  - name: load-generator
    image: busybox
    command: ["/bin/sh", "-c"]
    args:
    - |
      while true; do
        wget -q -O- http://portfolio-app:3000/healthz > /dev/null
      done
  restartPolicy: Never
